<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" >

        <item android:id="@+id/homeNoteFragment"
            android:title="@string/note"
            android:icon="@drawable/notes_icon" />

        <item android:id="@+id/archiveNoteFragment"
            android:title="@string/archive"
            android:icon="@drawable/archive_icon24px"
            android:checkable="true"/>

        <item android:id="@+id/deletedNoteFragment"
            android:title="@string/trash"
            android:icon="@drawable/trash_icon24px"
            android:checkable="true"/>

        <item android:id="@+id/settingNoteFragment"
            android:title="@string/settings"
            android:icon="@drawable/settings_icon24px" />
    </group>


</menu>