<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete_note"
        android:icon="@drawable/trash_icon24px"
        android:title="@string/delete"
        app:showAsAction="never" />

    <item android:id="@+id/action_pin_note"
        android:title="@string/pin"
        android:icon="@drawable/push_pin_outlined_24dp_icon"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_send_note"
        android:icon="@drawable/send_icon_24px"
        android:title="@string/send"
        app:showAsAction="ifRoom" />


    <item android:id="@+id/action_copy_note"
        android:title="@string/make_a_copy"
        app:showAsAction="never" />


</menu>